support default values for query features